fix panel cards spacing

--- a/styles/components/_panel-cards.scss
+++ b/styles/components/_panel-cards.scss
@@ -24,6 +24,9 @@
     .panel-item-title {
       margin-bottom: 20px;
     }
+    .panel-description {
+      margin-bottom: 4rem;
+    }
 
     .panel-dropdown {
       display: flex;
